--- a/back/src/main/resources/application.properties
+++ b/back/src/main/resources/application.properties
@@ -11,7 +11,8 @@ spring.jpa.properties.hibernate.type=${db.sql.type}
 server.port = ${server.port}
 liquibase.change-log=classpath:db\\changelog\\db-changelog-master.xml
 
-security.oauth2.client.client-id=tom
-security.oauth2.client.client-secret=pass
-security.oauth2.client.scope=read,write
+frontend.oauth2.clientId=front
+frontend.oauth2.secret=pass
+frontend.oauth2.tokenValidityInSeconds=3600
+frontend.oauth2.refreshTokenValidityInSeconds=86400
 logging.level.org.springframework.security=DEBUG
