--- a/back/pom.xml
+++ b/back/pom.xml
@@ -4,12 +4,12 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.jfeesoft</groupId>
-	<artifactId>officeRest</artifactId>
+	<artifactId>bplatform</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>OfficeRest</name>
-	<description>OfficeRest</description>
+	<name>bplaftorm</name>
+	<description>B-Platform</description>
 
 	<dependencyManagement>
 		<dependencies>
