--- a/back/src/main/resources/profiles/dev/application.properties
+++ b/back/src/main/resources/profiles/dev/application.properties
@@ -1,7 +1,7 @@
 db.ip=127.0.0.1
 db.username=postgres
 db.password=postgres
-db.name=office
+db.name=bplatfrom
 
 db.sql.show=true
 db.sql.comments=false
