building one jar app

--- a/bplatform-back/pom.xml
+++ b/bplatform-back/pom.xml
@@ -27,6 +27,12 @@
 
 	<dependencies>
 		<dependency>
+			<groupId>com.jfeesoft</groupId>
+			<artifactId>bplatform-front</artifactId>
+			<version>${project.version}</version>
+			<type>zip</type>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
@@ -136,6 +142,30 @@
 					</dependency>
 				</dependencies>
 			</plugin>
+			<plugin>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-dependency-plugin</artifactId>
+  <executions>
+    <execution>
+      <id>unpack</id>
+      <phase>generate-resources</phase>
+      <goals>
+        <goal>unpack</goal>
+      </goals>
+      <configuration>
+        <artifactItems>
+          <artifactItem>
+            <groupId>com.jfeesoft</groupId>
+            <artifactId>bplatform-front</artifactId>
+            <version>${project.version}</version>
+            <type>zip</type>
+          </artifactItem>
+        </artifactItems>
+        <outputDirectory>${project.build.directory}/classes/resources</outputDirectory>
+      </configuration>
+    </execution>
+  </executions>
+</plugin>
 		</plugins>
 	</build>
 	<profiles>
