--- a/bplatform-back/src/main/resources/profiles/dev/application.properties
+++ b/bplatform-back/src/main/resources/profiles/dev/application.properties
@@ -1,7 +1,7 @@
 db.ip=127.0.0.1
 db.username=postgres
 db.password=postgres
-db.name=bplatfrom
+db.name=bplatform
 
 db.sql.show=true
 db.sql.comments=false
